--- a/2-dom-manipulation/exercises/1-change-text.html
+++ b/2-dom-manipulation/exercises/1-change-text.html
@@ -36,6 +36,8 @@
           debugger;
 
           // write me! (... without using cloneNode, that's kind of cheating)
+          const textToChange = document.querySelector('#expected h1');
+          textToChange.textContent = 'bye!';
         </script>
       </div>
 
