--- a/2-dom-manipulation/exercises/3-update-list.html
+++ b/2-dom-manipulation/exercises/3-update-list.html
@@ -46,6 +46,10 @@
           debugger;
 
           // write me! (... without using cloneNode, that's kind of cheating)
+          const firstListItem = document.querySelector('#actual li');
+          console.log(firstListItem);
+          console.dir(firstListItem);
+          firstListItem.innerHTML = 'robots';
         </script>
       </div>
 
