--- a/2-dom-manipulation/exercises/6-fix-the-list.html
+++ b/2-dom-manipulation/exercises/6-fix-the-list.html
@@ -47,15 +47,19 @@
 
           // write me! (... without using cloneNode, that's kind of cheating)
           const actualDiv = document.querySelector('#actual');
-          const ul = document.querySelector('ul');
-          const listItems = [];
-          console.dir(listItems);
-          listItems.push(actualDiv.children[i].cloneNode(true));
+          const expectedDiv = document.querySelector('#expected');
+          const expectedUl = document.querySelector('ul');
+          const newUnorderedList = document.createElement('ul');
+          for (let i = 0; i < expectedUl.children[1].childElementCount; i++) {
+            const newLi = document.createElement('LI');
+            newLi.innerHTML = expectedUl.children[1].children[i].innerHTML;
+            newUnorderedList.appendChild(newLi);
+          }
+          console.dir(newUnorderedList);
+          actualDiv.replaceChild(newUnorderedList, actualDiv.children[1]);
           // const createUl = document.createElement('UL');
-          // for (let i = 0; i < 3; i++) {
-          //   listItems.push(actualDiv.children[i].cloneNode(true));
+          // for (let i = 0; i < 3; i++) {          //   listItems.push(actualDiv.children[i].cloneNode(true));
           // }
-          console.log(listItems);
           // actualDiv.replaceChild(createl, actualDiv.children[0]);
 
           // const ol = document.querySelector('ol');
